--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -51,7 +51,7 @@ info-sections:
     section-more-button: More Information
   - section-title: 
     section-subtitle: TECHNICAL WORKSHOPS
-    section-description: Workshops and deep-dive sessions that will be facilitated by GovTech engineers.
-    section-image-path: /images/Breakout-track-thumbnail.png
+    section-description: Workshops and deep-dive sessions that will be facilitated by GovTech engineers. Gain insights about service journeys, learn how to automate app tests and be the first to experience the sensors & IoT stack. 
+    section-image-path: /images/Breakout-track-thumbnail-V2.png
     section-more-button: More Information
-    section-more-button-url: /images/Breakout-track-detailed.png
+    section-more-button-url: /images/Breakout-track-detailedv4.png
