--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -17,7 +17,7 @@ button:
   
 #key-highlights:
   - title: Programme
-    description: STACK-X: Experience Reimagined
+    description: "STACK-X: Experience Reimagined"
     url: /
     external: true
   - title: Speaker Bio
@@ -27,20 +27,20 @@ button:
     description: Speak at STACK 2020 
     url: /stack2020-cfp
   - title: Past Events
-    description: STACK 2018 and STACK-X: Cloud
+    description: "STACK 2018 and STACK-X: Cloud"
     url: /past-events
 
 # The Programme Sections
 info-sections:
   - section-title: 
-    section-subtitle: STACK-X: Experience Reimagined
+    section-subtitle: "STACK-X: Experience Reimagined"
     section-description: Gain insights into the end-to-end customer journey, and learn to tap on technologies and tools that help predict and anticipate user demands for a better user experience. Join us at STACK-X: Experience Reimagined where GovTech and industry experts will share the design thinking process behind their successful customer-centric digital services and products.
     section-image-path: /images/StackX-Experience-Reimagined-small-banner.png
     section-more-button: Register Now
     section-more-button-url: https://rsvp.govtechstack.sg    
   - section-title: 
     section-subtitle: PROGRAMME
-    section-description: Overview of STACK-X: Experience Reimagined
+    section-description: "Overview of STACK-X: Experience Reimagined"
     section-image-path: /images/StackX-Coming-soon.png
     section-more-button: More Information
   - section-title: 
