--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -7,7 +7,7 @@
   - title: Main Session
     url: /speakers-bio/
   - title: Technical Workshops
-    url: /speakers-bio/
+    url: /facilitators-bio/
 - title: Stack 2020
   url: /stack2020-cfp/
 - title: Past Events
