--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 - title: Programme
-  url: /
+  url: /images/StackX-Programme-Experience-Reimagined.png
   external: true
 - title: Speaker Bio
   url: /speakers-bio/
