--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,7 +8,7 @@
     url: /speakers-bio/
   - title: Technical Workshops
     url: /facilitators-bio/
-- title: Stack 2020
+- title: STACK 2020
   url: /stack2020-cfp/
 - title: Past Events
   url: /past-events/
