--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -46,7 +46,7 @@ info-sections:
     section-more-button: More Information
   - section-title: 
     section-subtitle: TECHNICAL WORKSHOPS
-    section-description: Workshops and deep-dive sessions that will be facilitated by GovTech engineers. Gain insights about service journeys, learn how to automate app tests and be the first to experience the sensors & IoT stack. 
+    section-description: Workshops and deep-dive sessions that will be facilitated by GovTech engineers. Gain insights into service journeys, learn how to automate app tests and be the first to experience the sensors & IoT Tech Stack. 
     section-image-path: /images/Breakout-track-thumbnail-V2.png
     section-more-button: More Information
     section-more-button-url: /images/Breakout-track-detailedv4.png
