--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -36,7 +36,7 @@ info-sections:
   - section-title: 
     section-subtitle: PROGRAMME
     section-description: "Overview of STACK-X: Experience Reimagined"
-    section-image-path: /images/Programme-01.png
+    section-image-path: /images/Programme-V4-01.png
     section-more-button-url: /images/Programme-01.png  
     section-more-button: More Information
   - section-title: 
