--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 - title: Programme
-  url: /images/Programme-01.png
+  url: /images/StackX-Programme-V4-01.png
   external: true
 - title: Speaker Bio
   url: /speakers-bio/
