--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -36,8 +36,8 @@ info-sections:
   - section-title: 
     section-subtitle: PROGRAMME
     section-description: "Overview of STACK-X: Experience Reimagined"
-    section-image-path: /images/StackX-Programme-V4-01.png
-    section-more-button-url: /images/StackX-Programme-V4-01.png  
+    section-image-path: /images/STACKX-Programme-V5.jpg
+    section-more-button-url: /images/STACKX-Programme-V5.jpg  
     section-more-button: More Information
   - section-title: 
     section-subtitle: TECHNICAL WORKSHOPS
