update link to detailed workshop info_pdf

--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -44,7 +44,7 @@ info-sections:
     section-description: Workshops and deep-dive sessions that will be facilitated by GovTech engineers. Gain insights into service journeys, learn how to automate app tests and be the first to experience the sensors & IoT Tech Stack. 
     section-image-path: /images/Breakout-track-thumbnail-V2-01.png
     section-more-button: More Information
-    section-more-button-url: /images/Breakout-track-detailedv5-01.png
+    section-more-button-url: /images/STACKX-Breakout track- detailed-v2.pdf
   - section-title: 
     section-subtitle: STACK 2020 CALL FOR PROPOSAL
     section-description: Interested to engage fellow technologists? Participate in our Call for Proposal for STACK 2020.
