--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,5 +1,5 @@
 - title: Programme
-  url: /images/STACKX-Programme-V5.png
+  url: /images/Programme-V6.png
   external: true
 - title: Speaker Bio
   url: /speakers-bio/
@@ -9,7 +9,7 @@
   - title: Technical Workshops
     url: /facilitators-bio/
 - title: Workshops
-  url: /images/Breakout-track-detailedv5-01.png
+  url: /images/Breakout track - detailed_v9.pdf
   external: true
 - title: STACK 2020
   url: /stack2020-cfp/
