--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -42,9 +42,9 @@ info-sections:
   - section-title: 
     section-subtitle: TECHNICAL WORKSHOPS
     section-description: Workshops and deep-dive sessions that will be facilitated by GovTech engineers. Gain insights into service journeys, learn how to automate app tests and be the first to experience the sensors & IoT Tech Stack. 
-    section-image-path: /images/Breakout-track-thumbnail-V6.png
+    section-image-path: /images/Breakout_track_thumbnail_V12.png
     section-more-button: More Information
-    section-more-button-url: /images/Breakout track - detailed_v9.pdf
+    section-more-button-url: /images/Breakout_track_detailed_v10.png
   - section-title: 
     section-subtitle: STACK 2020 CALL FOR PROPOSAL
     section-description: Interested to engage fellow technologists? Participate in our Call for Proposal for STACK 2020.
