--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -9,7 +9,7 @@
   - title: Technical Workshops
     url: /facilitators-bio/
 - title: Workshops
-  url: /images/Breakout track - detailed_v9.pdf
+  url: /images/Breakout_track_detailed_v10.png
   external: true
 - title: STACK 2020
   url: /stack2020-cfp/
