Update breakout thumbnail

--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -42,7 +42,7 @@ info-sections:
   - section-title: 
     section-subtitle: TECHNICAL WORKSHOPS
     section-description: Workshops and deep-dive sessions that will be facilitated by GovTech engineers. Gain insights into service journeys, learn how to automate app tests and be the first to experience the sensors & IoT Tech Stack. 
-    section-image-path: /images/Breakout track-thumbnail-V5.jpg
+    section-image-path: /images/Breakout-track-thumbnail-V5A.jpg
     section-more-button: More Information
     section-more-button-url: /images/Breakout track-detailed-v10.pdf
   - section-title: 
