--- a/_data/homepage.yml
+++ b/_data/homepage.yml
@@ -31,8 +31,8 @@ info-sections:
     section-subtitle: "STACK-X: Experience Reimagined"
     section-description: Gain insights into the end-to-end customer journey, and learn to tap on technologies and tools that help predict and anticipate user demands for a better user experience. Join us at STACK-X: Experience Reimagined where GovTech and industry experts will share the design thinking process behind their successful customer-centric digital services and products.
     section-image-path: /images/StackX-Experience-Reimagined-small-banner.png
-    section-more-button: Register Now
-    section-more-button-url: https://rsvp.govtechstack.sg    
+    section-more-button: Join our mailing list for STACK 2020
+    section-more-button-url: https://form.gov.sg/5d7eed7128467500121f763e    
   - section-title: 
     section-subtitle: PROGRAMME
     section-description: "Overview of STACK-X: Experience Reimagined"
