--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -15,6 +15,6 @@
   url: /stack2020-cfp/
 - title: Past Events
   url: /past-events/
-- title: Register Now
-  url: https://rsvp.govtechstack.sg
+- title: Stay Updated
+  url: https://form.gov.sg/5d7eed7128467500121f763e
   external: true
